--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 # This file lists all individuals having contributed content to the repository.
 
-
-Jennifer Huang <133@holbertonschool.com>
-Alexa Orrico <210@holbertonschool.com>
-Joann Vuong <130@holbertonschool.com> 
+yassine rahhou <yassine.rahhou.1@gmailcom >
+zakaria elaroussi<contact@depressedpinguin.com >
+Joann Vuong <130@holbertonschool.com>
+YASSINE RAHHOOU - [Github](https://github.com/yassinerahhou) / [Twitter](https://twitter.com/yassinerahhou)  
+ZAKARIA EL AROUSSI - [Github](https://github.com/DepressedPenguin/) / [Twitter](https://twitter.com/DepressedPenguin/)
